--- a/Profile.html
+++ b/Profile.html
@@ -115,58 +115,24 @@
         </div>
         <!-- Закончилась разметка модального окна -->
     </section>
-    <!-- Контент. В h11 и img загрузить текст и картинку -->
-    <section>
+    <form>
         <div class="container text-center">
-            <div class="row">
-              <div class="col">
-                <h1>Welcome...</h1>
-              </div>
-              <div class="col">
-                <img class="w-100" src=".." alt="..">
-              </div>
-            </div>
-    </section>
-    <!-- Добавить картинки  и текст к ним-->
-    <section>
-        <div class="container text-center">
-            <h2>Bestsellers</h2>
-            <div class="container text-center">
-                <div class="row align-items-center">
-                  <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src=".." class="card-img-top" alt="..">
-                        <div class="card-body">
-                          <h33 class="card-title">Card title</h33>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Buy now</a>
-                        </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h44 class="card-title">Card title</h44>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Buy now</a>
-                        </div>
-                    </div>
-                  </div>
-                  <div class="col">
-                    <div class="card" style="width: 18rem;">
-                        <img src="..." class="card-img-top" alt="...">
-                        <div class="card-body">
-                          <h55 class="card-title">Card title</h55>
-                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                          <a href="#" class="btn btn-primary">Buy now</a>
-                        </div>
-                    </div>
-                  </div>
-                </div>
-              </div>
+          <p class="h2">Email address</p>
+          <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" placeholder="Enter email">
+          <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
         </div>
-    </section>
+        <div class="container text-center">
+          <p class="h2">Password</p>
+          <input type="password" class="form-control" id="exampleInputPassword1" placeholder="Password">
+        </div>
+        <div class="container text-center">
+          <input type="checkbox" class="form-check-input" id="exampleCheck1">
+          <label class="form-check-label" for="exampleCheck1">Check me out</label>
+        </div>
+        <div class="container text-center">
+            <button type="submit" class="btn btn-primary">Submit</button>
+        </div>
+    </form>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
