--- a/ItemsClothes.html
+++ b/ItemsClothes.html
@@ -115,6 +115,41 @@
         </div>
         <!-- Закончилась разметка модального окна -->
     </section>
+    <!-- Форма фильтров -->
+    <div class="dropdown mb-2">
+      <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
+          aria-expanded="false">
+          Filters
+      </button>
+      <form action="" method="get" class="dropdown-menu bg-dark" data-bs-theme="dark">
+          <p class="text-white mx-3 mt-3">Sort:</p>
+          <div class="form-check text-white mx-3">
+              <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default" checked>
+              <label class="form-check-label" for="flexRadioDefault1">
+                  Default
+              </label>
+          </div>
+          <div class="form-check text-white mx-3">
+            <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault1" value="default" checked>
+            <label class="form-check-label" for="flexRadioDefault1">
+                Sale
+            </label>
+          </div>
+          <div class="form-check text-white mx-3">
+              <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault2" value="price">
+              <label class="form-check-label" for="flexRadioDefault2">
+                  Price (low-hihg)
+              </label>
+          </div>
+          <div class="form-check text-white mx-3">
+              <input class="form-check-input" type="radio" name="order_by" id="flexRadioDefault3" value="-price">
+              <label class="form-check-label" for="flexRadioDefault3">
+                  Price (high-low)
+              </label>
+          </div>
+          <button type="submit" class="btn btn-primary mx-3 mt-3">Aplly</button>
+      </form>
+    </div> 
     <!-- Добавить картинки  и текст к ним-->
     <section>
         <div class="container text-center">
@@ -194,6 +229,22 @@
             </div>
       </div>
     </section>
+    <!-- Пагинация -->
+    <nav aria-label="Page navigation example">
+      <ul class="pagination justify-content-center my-4">
+          <div class="custom-shadow d-flex">
+              <li class="page-item disabled">
+                <a class="page-link">Previous</a>
+              </li>
+              <li class="page-item"><a class="page-link" href="#">1</a></li>
+              <li class="page-item"><a class="page-link" href="#">2</a></li>
+              <li class="page-item"><a class="page-link" href="#">3</a></li>
+              <li class="page-item">
+                <a class="page-link" href="#">Next</a>
+              </li>
+          </div>
+      </ul>
+    </nav>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
