--- a/Profile.html
+++ b/Profile.html
@@ -19,9 +19,6 @@
                   <li class="nav-item">
                     <a class="nav-link active" aria-current="page" href="#">Profile</a>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="#">Sale</a>
-                  </li>
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
                       Items
@@ -29,6 +26,7 @@
                     <ul class="dropdown-menu">
                       <li><a class="dropdown-item" href="#">Clothes</a></li>
                       <li><a class="dropdown-item" href="#">Shoes</a></li>
+                      <li><a class="dropdown-item" href="#">Accsesories</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
