--- a/AboutUs.html
+++ b/AboutUs.html
@@ -24,6 +24,7 @@
                       Items
                     </a>
                     <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">All</a></li>
                       <li><a class="dropdown-item" href="#">Clothes</a></li>
                       <li><a class="dropdown-item" href="#">Shoes</a></li>
                       <li><a class="dropdown-item" href="#">Accsesories</a></li>
