--- a/ItemsClothes.html
+++ b/ItemsClothes.html
@@ -24,6 +24,7 @@
                       Items
                     </a>
                     <ul class="dropdown-menu">
+                      <li><a class="dropdown-item" href="#">All</a></li>
                       <li><a class="dropdown-item" href="#">Clothes</a></li>
                       <li><a class="dropdown-item" href="#">Shoes</a></li>
                       <li><a class="dropdown-item" href="#">Accsesories</a></li>
@@ -44,7 +45,7 @@
     <!-- Значек корзины, вызывает модальное окно -->
     <section>
         <div>
-            <button type="button" class="btn btn-dark btn-secondary d-flex" id="modalButton" aria-expanded="false">
+            <button type="button" class="btn btn-primary mr-2" id="modalButton"  aria-expanded="false">
                 <img class="mx-1" src="deps/icons/basket2-fill.svg" alt="Catalog Icon" width="24" height="24">
                 <span id="goods-in-cart-count">0</span>
             </button>
@@ -115,7 +116,7 @@
     </section>
     <!-- Форма фильтров -->
     <div class="dropdown mb-2">
-      <button class="btn btn-secondary dropdown-toggle btn-dark" type="button" data-bs-toggle="dropdown"
+      <button class="btn btn-secondary w-100" type="button" data-bs-toggle="dropdown" 
           aria-expanded="false">
           Filters
       </button>
