--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     </header>
     <style>
       body {
-        background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTa6SrIgOBCfbQ77EMZYpc0GVsxnkhuIDUTug&s');
+        background-image: url('https://img.freepik.com/premium-photo/abstract-gradient-grey-background_1258-1834.jpg');
         background-repeat: no-repeat;
         background-size: cover;
       }
