--- a/product.html
+++ b/product.html
@@ -24,9 +24,10 @@
                       Items
                     </a>
                     <ul class="dropdown-menu">
-                      <li><a class="dropdown-item" href="#">Clothes</a></li>
-                      <li><a class="dropdown-item" href="#">Shoes</a></li>
-                      <li><a class="dropdown-item" href="#">Accsesories</a></li>
+                        <li><a class="dropdown-item" href="#">All</a></li>
+                        <li><a class="dropdown-item" href="#">Clothes</a></li>
+                        <li><a class="dropdown-item" href="#">Shoes</a></li>
+                        <li><a class="dropdown-item" href="#">Accsesories</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
